test/units/TypingSpec/valid/prog/let-pat-data.algst
data Identity a = Identity a

runIdentity : ∀(a:TU). Identity a -> a
runIdentity id =
  let Identity a = id in
  a

matchD0 : D0 -> ()
matchD0 d0 =
  let D0 = d0 in
  ()
