test/units/TypingSpec/invalid/prog/fun-align-5.algst
foo : Int -> ∀(a:TU). a -> ()
foo [a] _ _ = ()
